correct works items on mobile

--- a/src/assets/scss/works-section.scss
+++ b/src/assets/scss/works-section.scss
@@ -58,6 +58,9 @@
     height: 400px;
     border: 1px solid $light-text;
     overflow: hidden;
+    & img {
+      max-width: 100%;
+    }
     @media (max-width: $sm) {
       width: 250px;
       height: 250px;
@@ -66,6 +69,9 @@
   &__scetch-item {
     & img {
       max-width: 390px;
+      @media(max-width: $sm) {
+        max-width: 240px;
+      }
     }
   }
   &__btn {
